--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,15 +4,20 @@
     margin: 0;
 }
 
+body {
+    width: 1000px;
+    margin: 50px auto;
+}
+
 section {
     border: 1px solid; 
     padding: 25px;
-    margin: 25px;
+    margin: 50px 300px 300px 300px;
 }
 
 p { 
     background: turquoise;
     border: 4px solid;
-    padding: 25px;
+    padding: 40px 20px;
     margin: auto;
 }
